--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
             <p>Copyright © 2022 <a href="#">Sash</a>. Designed with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="#">Spruko</a> All rights reserved.</p>
             <div class="group_link_footer">
                 
-                <a href="#">Documentation </a>
+                <a href="#">documentation </a>
                 <a href="#">buy Now </a>
                 <a href="#"> our portfolio </a>
                 <a href="#"> licenses </a>
